# stock

./: .flake8  .gitignore  AGENTS.md  README.md  __init__.py  comprehensive_analyzer.py  data_downloader_function.py  data_manager.py  final_examples.md  financial_analyzer.py  import_transactions.py  init_stock_database.py  load_transactions.py  logging_utils.py  main.py  mypy.ini  pyproject.toml  requirements.txt  requirements_simple.txt  setup.py  show_data_examples.py  stock_analyzer.py  stock_analyzer_mock.py  test_refactor.db  test_stock.db  transactions.txt  verify_stooq_data_range.py
analysis_result/: AAPL_bollinger_demo.html  AAPL_candlestick_demo.html  AAPL_revenue_trend_demo.html  GOOGL_bollinger_demo.html  GOOGL_candlestick_demo.html  GOOGL_health_dashboard_demo.html  GOOGL_revenue_trend_demo.html  MSFT_bollinger_demo.html  MSFT_candlestick_demo.html  TSLA_bollinger_demo.html  TSLA_candlestick_demo.html
analysis_service/: __init__.py  analysis_service.py  comprehensive_analyzer.py  config.py
analytics/: AAPL_bollinger_demo.html  AAPL_candlestick_demo.html  GOOGL_bollinger_demo.html  GOOGL_candlestick_demo.html  MSFT_bollinger_demo.html  MSFT_candlestick_demo.html  TEST_candlestick_demo.html  TSLA_bollinger_demo.html  TSLA_candlestick_demo.html
analyzer/: README.md  __init__.py  chart_generator.py  comprehensive_analyzer.py  config.py  data_downloader.py  data_fetcher.py  database.py  financial_analyzer.py  hybrid_downloader.py  stock_analyzer.py  stooq_downloader.py
cloud/: GCP_DEPLOYMENT_GUIDE.md  README.md  cloudbuild.yaml  database_setup.py  deploy.sh  monitor.sh  test_local.py
data_service/: README.md  __init__.py  config.py  data_service.py  database.py  database_backup.py  database_backup_full.py  exceptions.py  hybrid_downloader.py  models.py  quality.py  stooq_downloader.py  yfinance_downloader.py
database/: stock_data.db  stocks_2000.db
docs/: code_review_focused_service_layer.md  code_review_trading_system.md  deployment_checklist.md  lot_tracking_guide.md  migration_guide.md  trading_module_design.md
result/: analysis_20250907_205440.json  analysis_20250907_210547.json  analysis_20250907_212425.json  analysis_20250907_212453.json  analysis_20250907_223538.json  analysis_20250907_225944.json  analysis_20250907_225951.json  analysis_20250907_230631.json  analysis_20250907_230718.json  analysis_20250907_230822.json  analysis_20250907_231025.json
results/: AAPL_health_dashboard_demo.html  MSFT_health_dashboard_demo.html  MSFT_revenue_trend_demo.html  TEST_bollinger_demo.html  TSLA_health_dashboard_demo.html  TSLA_revenue_trend_demo.html
stock_analysis/: __init__.py
tests/: run_comprehensive_tests.py  test_financial_operators.py  test_operators_basic.py  test_trading_performance.py
tools/: consistency_check.py  data_analyzer.py  data_manager.py  db_print.py  (+4 more)
(+112 files in other folders)
