[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis"
description = "Stock data download and analysis toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Stock Analysis Team", email = "your-email@example.com"}
]
keywords = ["stock", "finance", "data", "analysis", "yfinance", "stooq", "trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=1.5.0",
    "pandas-datareader>=0.10.0",
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "requests>=2.28.0",
    "plotly>=5.10.0",
    "kaleido>=0.2.1"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]
cloud = [
    "boto3>=1.26.0",
    "google-cloud-storage>=2.7.0",
]

[project.scripts]
stock-download = "Stock.data_service.yfinance_downloader:main"
stock-hybrid = "Stock.data_service.hybrid_downloader:main"
stock-analyze = "Stock.analyzer.comprehensive_analyzer:main"

[project.urls]
Homepage = "https://github.com/your-username/stock-analysis"
"Bug Reports" = "https://github.com/your-username/stock-analysis/issues"
Source = "https://github.com/your-username/stock-analysis"
Documentation = "https://github.com/your-username/stock-analysis/wiki"

[tool.setuptools]
packages = ["Stock", "Stock.data_service", "Stock.data_service.services", "Stock.analyzer", "Stock.cloud"]
include-package-data = true

[tool.setuptools.package-data]
Stock = ["*.md", "*.txt", "*.yml", "*.yaml"]
"Stock.data_service" = ["*.sql"]
"Stock.analyzer" = ["templates/*.html"]

[tool.setuptools_scm]
write_to = "Stock/_version.py"

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true